<resources>
    <string name="app_name">Travel Diary</string>
    <string name="title_activity_maps">Travel Diary</string>
    <string name="save">Сохранить</string>
    <string name="discr">Описание:</string>
    <string name="icon_color">Цвет иконки:</string>
    <string name="del_marker">Удалить маркер</string>
    <string name="add_photo">Добавить фото</string>
    <string name="add_curr_place">Добавить текущее место</string>
    <string name="adress">Введите адрес</string>
    <string name="add_marker">Добавить метку</string>
    <string name="add_travel">Добавить путешествие</string>
    <string name="travel_list">Список путешествий:</string>
    <string name="print_all">Показать все</string>
    <string name="del_travel">Удалить путешествие</string>
    <string name="mark_list">Список точек вне путешествий:</string>

    <string-array name="colorIcon">
        <item>Крест</item>
        <item>Дом</item>
        <item>Фото</item>
        <item>Бетмэн</item>
        <item>Пират</item>
    </string-array>

    <string-array name="colorTravel">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Желтый</item>
        <item>Розовый</item>
        <item>Красный</item>
    </string-array>
</resources>
